k8s/challenge45/ingress-api.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-api
  namespace: tripapi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: user
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips
